fix on gap for heade r_socialicons

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -27,7 +27,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    /* gap: 1rem; */
     position: absolute;
     left: 0;
     bottom: 3.5rem;
